2017-03-04  Ulrich Müller  <ulm@gentoo.org>

	* ebuild-mode.el (ebuild-mode-update-copyright): Modify the buffer
	only if necessary. Warn about equal first and last year.

2017-02-28  Ulrich Müller  <ulm@gentoo.org>

	* Version 1.33 released.

	* ebuild-mode.el (ebuild-mode-update-copyright)
	(ebuild-mode-delete-cvs-line): New custom variables, default to t.
	(ebuild-mode-copyright-regexp, ebuild-mode-cvs-header-regexp):
	New variables.
	(ebuild-mode-update-copyright, ebuild-mode-delete-cvs-line):
	New functions.
	(ebuild-mode-before-save): Update copyright years and remove CVS
	Id or Header line, when customised to do so, respectively.

2017-02-27  Ulrich Müller  <ulm@gentoo.org>

	* ebuild-mode.el (ebuild-mode): New customisation group.
	(ebuild-mode-portdir): Change to custom variable.
	(ebuild-mode-fix-whitespace): New custom variable, defaults to t.
	(ebuild-mode-before-save): Make fixing of whitespace conditional.

	* ebuild-mode.el:
	* ebuild-mode.texi: Update documentation to use generic terms
	where possible, instead of being Portage specific.

2017-02-26  Ulrich Müller  <ulm@gentoo.org>

	* Version 1.32 released.

	* ebuild-mode.el (ebuild-mode-insert-skeleton): Remove $Id$ line
	from ebuild header.

	* ebuild-mode-keywords.el (ebuild-mode-keywords-*): Regenerated.

2017-01-15  Ulrich Müller  <ulm@gentoo.org>

	* ebuild-mode.el (ebuild-mode-get-keywords)
	(ebuild-mode-put-keywords): Improve error handling.

2016-06-19  Ulrich Müller  <ulm@gentoo.org>

	* Version 1.31 released.

	* ebuild-mode-keywords.el (ebuild-mode-keywords-*): Regenerated.

2016-06-08  Ulrich Müller  <ulm@gentoo.org>

	* ebuild-mode.texi (Commands): Update Bugzilla URL to https.

2016-05-28  Ulrich Müller  <ulm@gentoo.org>

	* ebuild-mode.el (auto-mode-alist): Drop eblit support.

2016-05-07  Ulrich Müller  <ulm@gentoo.org>

	* Version 1.30 released.

	* ebuild-mode-keywords.el (ebuild-mode-keywords-*): Regenerated.

	* keyword-generation.sh (OBSOLETE): Cleanup.
